--- a/runner.html
+++ b/runner.html
@@ -17,7 +17,7 @@
   -->
 
   <!-- include spec files here... -->
-  <script type="text/javascript" src="spec.js" data-cover></script>
+  <script type="text/javascript" src="emailList_tests.js" data-cover></script>
 
   <script type="text/javascript">
     (function() {
